# python-musicpd

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.txt  MANIFEST.in  README.rst  README.txt  mpd.py  musicpd.py  pyproject.toml  setup.cfg  setup.py  test.py
.woodpecker/: notify-failure.yaml  notify-success.yaml  notify.sh  tests.yaml
doc/: commands.txt  extract_supported_commands.py
doc/source/: _commands.rst  commands.rst  commands.txt  conf.py  contribute.rst  doc.rst  examples.rst  index.rst  use.rst
doc/source/examples/: client.py  connect.py  connect_host.py  exceptions.py  findadd.py  playback.py
