# SPDX-FileCopyrightText: 2012-2021  kaliko <kaliko@azylum.org>
# SPDX-License-Identifier: GPL-3.0-or-later
[sdist]
formats = gztar,zip

[metadata]
name = python-musicpd
description = An MPD (Music Player Daemon) client library written in pure Python.
version = attr: musicpd.VERSION
long_description =  file: README.rst
long_description_content_type = text/x-rst
license = LGPLv3
license_file = LICENSE.txt
author = 'Kaliko Jack'
author_email = 'kaliko@azylum.org'
url = 'https://kaliko.me/python-musicpd/'
download_url = 'https://pypi.org/project/python-musicpd/'
keywords = mpd, Music Player Daemon
classifiers =
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"

[options]
python_requires = >=3.6
py_modules = musicpd

[bdist_wheel]
universal = 0

[build_sphinx]
source-dir = doc/source
build-dir  = build
all_files  = 1

[pycodestyle]
max_line_length = 88
